test: exclude test-stacktrace(-not)?-symbolized from the coredump check
As they are expected coredumps from the EnterNamespace= feature test.

(cherry picked from commit cfb604f8f7c83912648d69bd3ad89c2436b4b8ef)
(cherry picked from commit 8505d0e3d825c5626cf2ae8efe38e8b489b9018e)

--- a/test/integration-tests/TEST-87-AUX-UTILS-VM/meson.build
+++ b/test/integration-tests/TEST-87-AUX-UTILS-VM/meson.build
@@ -5,7 +5,7 @@ integration_tests += [
         integration_test_template + {
                 'name' : fs.name(meson.current_source_dir()),
                 'storage': 'persistent',
-                'coredump-exclude-regex' : '/(test-usr-dump|test-dump|bash)$',
+                'coredump-exclude-regex' : '/(test-usr-dump|test-dump|test-stacktrace(-not)?-symbolized|bash)$',
                 'vm' : true,
                 'firmware' : 'auto',
         },
