--- a/.github/workflows/mkosi.yml
+++ b/.github/workflows/mkosi.yml
@@ -105,7 +105,7 @@ jobs:
             sanitizers: ""
             llvm: 0
             cflags: "-Og"
-            relabel: no
+            relabel: yes
             vm: 0
           - distro: centos
             release: "9"
