--- a/mkosi/mkosi.images/minimal-base/mkosi.conf.d/debian-ubuntu.conf
+++ b/mkosi/mkosi.images/minimal-base/mkosi.conf.d/debian-ubuntu.conf
@@ -7,6 +7,7 @@ Distribution=|ubuntu
 [Content]
 PrepareScripts=%D/mkosi/mkosi.conf.d/debian-ubuntu/systemd.prepare
 Packages=
+        bsdextrautils
         hostname
         iproute2
         mount
