ci: fix workaround about bpftool for codeql
Follow-up for e9fd2bbfffc5c2c7cd1ea0a288d5435fc15e387f.

(cherry picked from commit a6836cfa0bdf1bb1fcf05686c5af3f2b5ad97f6b)
(cherry picked from commit e1c382a53cfe991269c8f98956a283a83c13c960)

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,7 +55,7 @@ jobs:
         # TODO: drop after we switch to ubuntu 26.04
         bpftool_binary=$(find /usr/lib/linux-tools/ /usr/lib/linux-tools-* -name 'bpftool' -perm /u=x 2>/dev/null | sort -r | head -n1)
         if [ -n "$bpftool_binary" ]; then
-          sudo rm -f /usr/bin/bpftool
+          sudo rm -f /usr/{bin,sbin}/bpftool
           sudo ln -s "$bpftool_binary" /usr/bin/
         fi
 
