ci: add bpftool workaround to coverity too
(cherry picked from commit d29f181cf02100c146fc8691a5515a708d06ddbf)
(cherry picked from commit c2678480a79ad1fcab0b5c9a4c3195dbe0c490d1)

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -25,6 +25,13 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       # Reuse the setup phase of the unit test script to avoid code duplication
       - name: Install build dependencies
-        run: sudo -E .github/workflows/unit-tests.sh SETUP
+        run: |
+          sudo -E .github/workflows/unit-tests.sh SETUP
+          # TODO: drop after we switch to ubuntu 26.04
+          bpftool_binary=$(find /usr/lib/linux-tools/ /usr/lib/linux-tools-* -name 'bpftool' -perm /u=x 2>/dev/null | sort -r | head -n1)
+          if [ -n "$bpftool_binary" ]; then
+            sudo rm -f /usr/{bin,sbin}/bpftool
+            sudo ln -s "$bpftool_binary" /usr/bin/
+          fi
       - name: Build & upload the results
         run: tools/coverity.sh
