units: use Title Case for network generator description string
We use Title Case for all other units, do so here too.

(cherry picked from commit 15fec4b6464304dd4abaaea4088b0228c4dfdf6c)
(cherry picked from commit 90133eace306e028a5238fc2e96679ab2d673b3e)

--- a/units/systemd-network-generator.service.in
+++ b/units/systemd-network-generator.service.in
@@ -8,7 +8,7 @@
 #  (at your option) any later version.
 
 [Unit]
-Description=Generate network units from Kernel command line
+Description=Generate Network Units from Kernel Command Line
 Documentation=man:systemd-network-generator.service(8)
 
 DefaultDependencies=no
